# alpha-edtech-hard

./: .gitignore  README.md
CICLO-1/MODULO-10-VISAO-COMPUTACIONAL/Visão-Computacional-reconhecimento-texto-OCR-OpenCV/Meus-Testes/tkinter_designer/projeto_tkinter/: pyproject.toml
CICLO-1/MODULO-10-VISAO-COMPUTACIONAL/checkpoint/: checkpoint.code-workspace  checkpoint.py
CICLO-1/MODULO-3-PYTHON-AVANCADO/AULA-04-GENERATORS-ITERATORS/: testes.py
CICLO-1/MODULO-4-PYTHON-ORIENTADO-OBJETOS/AULA-03-CLASSES-E-OBJETOS/: exemplo_sala.py
CICLO-1/MODULO-4-PYTHON-ORIENTADO-OBJETOS/PROJETO/: DIAGRAMA DE PROJETO DE OO.drawio
CICLO-1/MODULO-8-AMBIENTE-VIRTUAL/AULA-01-VENV-POETRY/ATIVIDADE/Q01/projeto_q01/: pyproject.toml
CICLO-1/MODULO-8-AMBIENTE-VIRTUAL/AULA-01-VENV-POETRY/ATIVIDADE/Q01/projeto_q01/projeto_q01/: ola_mundo.py
CICLO-1/MODULO-9-BANCO-DE-DADOS/AULA-07-PSYCOPG/: teste_conexão.py
CICLO-1/MODULO-9-BANCO-DE-DADOS/AULA-10-SQLAlCHEMY/: db_plataforma_comunicacao.db
CICLO-1/MODULO-9-BANCO-DE-DADOS/AULA-10-SQLAlCHEMY/plataforma_comunicacao/: db_plataforma_comunicacao.db  main.py  pyproject.toml  requiriments.txt
CICLO-1/MODULO-9-BANCO-DE-DADOS/AULA-10-SQLAlCHEMY/plataforma_comunicacao/infra/: classes.py  config.py  funcoes.py
CICLO-1/MODULO-9-BANCO-DE-DADOS/AULA-10-SQLAlCHEMY/sistema-reserva_restaurante/: main.py  pyproject.toml  requisitos.md  reserva_restaurante.db
CICLO-1/MODULO-9-BANCO-DE-DADOS/AULA-10-SQLAlCHEMY/sistema-reserva_restaurante/infra/classes/: cliente.py  lista_espera.py  mesa.py  mesa_reserva.py  reserva.py
CICLO-1/MODULO-9-BANCO-DE-DADOS/AULA-10-SQLAlCHEMY/sistema-reserva_restaurante/infra/config/: conexao.py  conexao1.py  create_table.py
CICLO-1/MODULO-9-BANCO-DE-DADOS/AULA-10-SQLAlCHEMY/sistema-reserva_restaurante/infra/repositorio/: cliente_repositorio.py  reserva.repositorio.py
(+461 files in other folders)
