[tool.poetry]
name = "projeto-q01"
version = "0.1.0"
description = ""
authors = ["rubenfreita <rubensfreitas65@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ola_mundo = "projeto_q01.ola_mundo:ola_mundo"